feat(path): fix path crud
