# internal/models/path.go
@@ -2,19 +2,17 @@ package models
 
 type Path struct {
 	GormModel
-	Name        string `json:"name" gorm:"column:name"`
-	SchoolId    uint   `json:"schoolId" gorm:"column:schoolId"`
-	Description string `json:"description" gorm:"column:description"`
+	ShortName string `json:"shortName" gorm:"column:short_name"`
+	SchoolId  uint   `json:"schoolId" gorm:"column:school_id"`
+	LongName  string `json:"longName" gorm:"column:long_name"`
 }
 
 type PathCreate struct {
-	Name        string `json:"name" binding:"required"`
-	Description string `json:"description"`
-	SchoolId    uint   `json:"schoolId" binding:"required"`
+	ShortName string `json:"shortName" binding:"required"`
+	LongName  string `json:"longName"`
 }
 
 type PathUpdate struct {
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	SchoolId    uint   `json:"schoolId"`
+	ShortName string `json:"shortName"`
+	LongName  string `json:"longName"`
 }
